安全管理&细节修改

--- a/admin/index/safe/application-training/child/device-name.html
+++ b/admin/index/safe/application-training/child/device-name.html
@@ -47,7 +47,7 @@
     addTable ={
         table:{
             cols: [[ //表头
-                {type:"checkbox"}
+                {type:"radio"}
                 , {field: 'device_name', title: '设备名称', minWidth: 450}
             ]]
             , "data": [
