--- a/admin/index/safe/maintenance-management/invoice-audit.html
+++ b/admin/index/safe/maintenance-management/invoice-audit.html
@@ -75,7 +75,7 @@
                     "invoice_amount": "40.0",       //发票金额
                     "register_person": "Admin",     //登记人
                     "register_time": "2018-12-11 18:58:06", //登记时间
-                    "eqId": "10000"              //设备id，不显示，用于点击编辑按钮传入到下个页面
+                    "eqId": "10000"              //设备id，不显示，用于点击审核按钮传入到下个页面
                 }
             ]
             , done: function (obj) {
@@ -90,7 +90,7 @@
                         {
                             type:2,
                             event: "edit",
-                            "title":"审核",
+                            "title":"维修发票审核",
                             content:"./child/examine.html"
 
                         }
