--- a/admin/index/safe/maintenance-management/child/issuing-office-select.html
+++ b/admin/index/safe/maintenance-management/child/issuing-office-select.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>维修单号-选择</title>
+    <title>开票单位-选择</title>
     <link rel="stylesheet" type="text/css" href="../../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../../../../static/admin/css/all.min.css"/>
@@ -23,22 +23,16 @@
     </div>
 </div>
 <script type="text/html" id="toolBar">
-    <div class="addBtn">
-        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
-    </div>
     <div class="visible-xs">
         <a class="layui-btn layui-btn-primary layui-btn-fluid layui-btn-sm" lay-event="dataSearch">数据检索</a>
     </div>
     <div class=" hidden-xs"  id="hideXs">
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-input-inline xs-100 mar10-0 pad0-10">
-                <input class="layui-input" name="" placeholder="维修单号" autocomplete="off">
+                <input class="layui-input" name="" placeholder="拼音码" autocomplete="off">
             </div>
             <div class="layui-input-inline xs-100 mar10-0 pad0-10">
-                <input class="layui-input" name="" placeholder="设备拼音码" autocomplete="off">
-            </div>
-            <div class="layui-input-inline  xs-100 mar10-0 pad0-10" align="center">
-                <button class="layui-btn" data-type="reload">搜索</button>
+                <button class="layui-btn" lay-submit="" lay-filter="demo1">查找</button>
             </div>
         </form>
     </div>
@@ -50,22 +44,19 @@
         table:{
             cols: [[ //表头
                 {type:"radio"}
-                , {field: 'department', title: '所在部门', minWidth: 120}
-                , {field: 'equ_id', title: '维修单号', minWidth: 120}
-                , {field: 'equ_name', title: '设备名称', minWidth: 120}
-                , {field: 'equ_model', title: '型号', minWidth: 120}
-                , {field: 'specifications', title: '规格', minWidth: 120}
-                , {field: 'repair_price', title: '维修费', minWidth: 120, sort: true}
+                , {field: 'maintainer', title: '维修商', minWidth: 300}
+                , {field: 'contacts', title: '联系人', minWidth: 80}
+                , {field: 'phone', title: '联系人电话', minWidth: 120}
+                , {field: 'email', title: 'Email地址', minWidth: 200}
+                , {field: 'Manufacturer_id', title: '厂商ID', minWidth: 300}
             ]]
-            ,"height":"full-15"
             , "data": [
                 {
-                    "department": 'B超室',        //所在部门
-                    "equ_id": "030515610730",     //维修单号
-                    "equ_name": "诊断床",         //设备名称
-                    "equ_model": "HB-150Y",       //型号
-                    "specifications": "20",       //规格
-                    "repair_price": "2000"        //维修费
+                    "maintainer": '安利（中国）日用品有限公司烟台分销中心',       //维修商
+                    "contacts": "xxxxx",                                         //联系人
+                    "phone": "18132565441",                                      //联系人电话
+                    "email": "88888888888@sina.com",                            //Email地址
+                    "Manufacturer_id": "4ac29222-3255-11e7-ac85-000c291e4751",  //厂商ID
                 }]
             , done: function (obj) {
                 tableFunc({
