--- a/admin/index/safe/maintenance-management/child/repair-equipment-select.html
+++ b/admin/index/safe/maintenance-management/child/repair-equipment-select.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>员工选择</title>
+    <title>报修设备-选择</title>
     <link rel="stylesheet" type="text/css" href="../../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../../static/admin/css/admin.css"/>
     <link rel="stylesheet" href="../../../../../static/admin/css/all.min.css"/>
@@ -23,17 +23,18 @@
     </div>
 </div>
 <script type="text/html" id="toolBar">
-    <div class="addBtn">
-        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
-    </div>
     <div class="visible-xs">
         <a class="layui-btn layui-btn-primary layui-btn-fluid layui-btn-sm" lay-event="dataSearch">数据检索</a>
     </div>
     <div class=" hidden-xs"  id="hideXs">
         <form class="layui-form layui-form-pane" action="">
+            <div class="layui-input-inline xs-100 mar10-0 pad0-10">
+                <input class="layui-input" name="" placeholder="院内编号" autocomplete="off">
+            </div>
             <div class="layui-input-inline xs-100 mar10-0 pad0-10" style="width: 120px;">
                 <select id="department" name="" lay-search="">
                     <option value="" >请选择部门</option>
+                    <option value="0000"  >aaa</option>
                     <option value="0001"  >病案室</option>
                     <option value="0002"  >病案质控室</option>
                     <option value="1061100"  >鼻病门诊</option>
@@ -598,7 +599,7 @@
                 </select>
             </div>
             <div class="layui-input-inline xs-100 mar10-0 pad0-10">
-                <input class="layui-input" name="" placeholder="员工编号" autocomplete="off">
+                <input class="layui-input" name="" placeholder="设备名称拼音码" autocomplete="off">
             </div>
             <div class="layui-input-inline xs-100 mar10-0 pad0-10">
                 <button class="layui-btn" lay-submit="" lay-filter="demo1">查找</button>
@@ -614,28 +615,24 @@
             cols: [[ //表头
                 {type:"radio"}
                 , {field: 'department', title: '部门', minWidth: 120}
-                , {field: 'pid', title: '编号', minWidth: 150}
-                , {field: 'pname', title: '姓名', minWidth: 100}
-                , {field: 'psex', title: '性别', minWidth: 50}
-                , {field: 'education', title: '学历', minWidth: 100}
-                , {field: 'post', title: '岗位', minWidth: 120}
-                , {field: 'job', title: '职称', minWidth: 120}
-                , {field: 'work_time', title: '参与工作时间', minWidth: 120}
-                , {field: 'up_time', title: '晋升时间', minWidth: 120}
-                , {field: 'graduated', title: '毕业院校', minWidth:150}
+                , {field: 'equ_id', title: '设备编号', minWidth: 150}
+                , {field: 'hospital_id', title: '院内编号', minWidth: 120}
+                , {field: 'equ_name', title: '设备名称', minWidth: 120}
+                , {field: 'equ_brand', title: '品牌', minWidth: 120}
+                , {field: 'equ_model', title: '型号', minWidth: 100}
+                , {field: 'specifications', title: '规格', minWidth: 100}
+                , {field: 'start_date', title: '启用日期', minWidth: 120}
             ]]
             , "data": [
                 {
-                    "department": '1',
-                    "pid": "2",
-                    "pname": "3",
-                    "psex": "4",
-                    "education": "5",
-                    "post": "6",
-                    "job": "7",
-                    "work_time": "8",
-                    "up_time": "9",
-                    "graduated": "10"
+                    "department": '病案室',          //部门
+                    "equ_id": "17090830149044",      //设备编号
+                    "hospital_id": "90007289",       //院内编号
+                    "equ_name": "计算机主机",        //设备名称
+                    "equ_brand": "5",                //品牌
+                    "equ_model": "启天M4600",        //型号
+                    "specifications": "启天M4600",   //规格
+                    "start_date": "2017-09-29"      //启用日期
                 }]
             , done: function (obj) {
                 tableFunc({
