修改文件树不可修改

--- a/admin/index/beneft/cost-benefit/internal-subjects.html
+++ b/admin/index/beneft/cost-benefit/internal-subjects.html
@@ -19,7 +19,8 @@
     <script type="text/javascript" src="./treeNode/js/jquery.min.js"></script>
     <script type="text/javascript" src="./treeNode/js/jquery.ztree.core.js"></script>
     <script type="text/javascript" src="./treeNode/js/jquery.ztree.excheck.js"></script>
-    <script type="text/javascript" src="./treeNode/js/jquery.ztree.exedit.js"></script>
+    <!--修改增加，删除操作的js，此处不需要-->
+    <!--<script type="text/javascript" src="./treeNode/js/jquery.ztree.exedit.js"></script>-->
 </head>
 
 <body>
